etc/yaml/setup/02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jsc-home-certificate
  namespace: jsc-ns
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - YOUR_DOMAIN.TLD
        - api.YOUR_DOMAIN.TLD
      secretName: jsc-home-certificate
  rules:
    - host: YOUR_DOMAIN.TLD
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: k3s-dashboard-svc-client
                port:
                  number: 80
    - host: api.YOUR_DOMAIN.TLD
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: k3s-dashboard-svc-server
                port:
                  number: 3000
